se añadió section advanced statics

--- a/index.html
+++ b/index.html
@@ -78,10 +78,20 @@
       
   </section>
 
-  <section>
+  <section class="section-advanced">
+    <div class="">
+        <h1 class="title-advanced">Advanced Statistics</h1>
+    </div>
+    <div>
+      <p class="msg">
+        Track how your links are performing across the web with our 
+        advanced statistics dashboard.
+      </p>
+    </div>
+  </section>
 
-    Track how your links are performing across the web with our 
-    advanced statistics dashboard.
+
+  <section>
 
     Brand Recognition
 
