first icon section

--- a/index.html
+++ b/index.html
@@ -91,12 +91,23 @@
   </section>
 
 
-  <section>
+  <section class="sec-div-icons">
+    <div class="brnd-sction">
 
-    Brand Recognition
+      <div class="img-class div-center">
+        <div class="bg-div-img">
+          <img class="img-brnd" src="images/icon-brand-recognition.svg">
+        </div>
+      </div>
 
-    Boost your brand recognition with each click. Generic links don’t 
-    mean a thing. Branded links help instil confidence in your content.
+      <h2 class="reco"> 
+        Brand Recognition
+      </h2>
+      <p class="boost">
+        Boost your brand recognition with each click. Generic links don’t 
+        mean a thing. Branded links help instil confidence in your content.
+      </p>
+    </div>
 
     Detailed Records
 
@@ -144,5 +155,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+brn
+    
+d-sction
 </body>
-</html>
+</html>}
