--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   </section>
 
     <section>
-      <div class="itm-1">
-        <h2>More than just shorter links</h2>
+      <div>
+        <h2 class="itm-1">More than just shorter links</h2>
       </div>
 
       <div>
@@ -185,7 +185,7 @@
         <h5>Company</h5> 
       </div>
       <div class="footer-subtitles-gray">
-        <h5>About/h5>        
+        <h5>About</h5>        
         <h5>Our Team</h5>
         <h5>Careers</h5>
         <h5>Contact</h5>
@@ -209,7 +209,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Team-07</a>.
   </div>
 </body>
-</html>}
+</html>
