--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <img class="working-img" src="images/illustration-working.svg">
   </section>
 
-    <section>
+    <section class="itm-1-1">
       <div>
         <h2 class="itm-1">More than just shorter links</h2>
       </div>
