mobile view finish2 Co-authored-by: JordiGN jordign.mx@gmail.com
Co-authored-by: develiasdaniel eliasdanielsanchezlopez@gmail.com

--- a/index.html
+++ b/index.html
@@ -192,16 +192,16 @@
       </div>
       <div class="div-icons">
         <div class="icons">          
-         <img src="../images/icon-facebook.svg" alt="">   
+         <img src="images/icon-facebook.svg" alt="">   
         </div>
         <div class="icons">
-          <img src="../images/icon-twitter.svg" alt="">
+          <img src="images/icon-twitter.svg" alt="">
         </div>
         <div class="icons">          
-          <img src="../images/icon-pinterest.svg" alt="">
+          <img src="images/icon-pinterest.svg" alt="">
         </div>
         <div class="icons">
-          <img src="../images/icon-instagram.svg" alt="">          
+          <img src="images/icon-instagram.svg" alt="">          
         </div>      
       </div>
     </div>
