pequeños cambios mientras se explicaba

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </section>
 
   <section class="section-advanced">
-    <div class="">
+    <div>
         <h1 class="title-advanced">Advanced Statistics</h1>
     </div>
     <div class="adv-statistic">
@@ -90,7 +90,6 @@
       </p>
     </div>
   </section>
-
 
   <section class="sec-div-icons">
     <div class="features-section">
@@ -158,6 +157,7 @@
         
       </div>
     </div>
+    
     <section class="boost-sec">
       <div class="div-center col-direction boost-div">
         <h2 class="title-advanced upper-margin">Boost your links today</h2>
