--- a/index.html
+++ b/index.html
@@ -43,24 +43,20 @@
      
   </header>
   
-  <section>
-
-  <section class="img-section-1">
-    <img class="working-img" src="images/illustration-working.svg">
-  </section>
-
+ <section class="section-get-started">
+    <section class="img-section-1">
+      <img class="working-img" src="images/illustration-working.svg">
+    </section>
     <section class="itm-1-1">
       <div>
         <h2 class="itm-1">More than just shorter links</h2>
       </div>
-
       <div>
         <p class="msg">
           Build your brand’s recognition and get detailed insights 
           on how your links are performing.
         </p>
       </div>
-
       <div class="gs-btn-div div-center">
         <button class="gs-btn" >Get Started</button>
       </div>
