agregando el estilo del card shorteneed en version desktop Co-authored-by: alcamk alvarezohc@gmail.com Co-authored-by: develiasdaniel eliasdanielsanchezlopez@gmail.com

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  </style>n
 </head>
 <body>
   <header class="container">
@@ -75,16 +75,16 @@
     </div>
     <div class="gray-bg div-center">
       <div class="cards-shortened">
-        <div>
+        <div class="div-center">
           <span>www.frontendmentor.com/dalskdjals</span>
         </div>
         <div class="rayita-shorten"></div>
-        <div>
-          <div>
+        <div class="grid-cont">
+          <div class="div-center">
             <span class="cyan-color">https://shoretn/url</span>
           </div>
-          <div>
-            <button class="btn-short-it">Copy</button>
+          <div class="div-center">
+            <button onclick="btncopy()" class="btn-short-it btn-copy">Copy</button>
           </div>
         </div>
       </div>
