creando template para insercion de card con informacion del link recortado Co-authored-by: develiasdaniel eliasdanielsanchezlopez@gmail.com Co-authored-by: alcamk alvarezohc@gmail.com

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="container">
     <div class="menu-logo">
         <img style src="images/logo.svg">
-        <button onclick="showMenu()" class="transparent-button"><img src="./images/open-menu.svg" alt="" height="20px"></button>
+        <buttoen onclick="showMenu()" class="transparent-button"><img src="./images/open-menu.svg" alt="" height="20px"></button>
     </div>
     
     <div id="menumorado" class="menu-morado"> <!-- Div morado -->
@@ -73,7 +73,7 @@
         </div>
       </div>
     </div>
-    <div class="gray-bg div-center">
+    <div id="shortenedlinksdiv" class="gray-bg div-center">
       <div class="cards-shortened">
         <div class="div-center">
           <span>www.frontendmentor.com/dalskdjals</span>
