active states web-desktop Co-authored-by: develiasdaniel eliasdanielsanchezlopez@gmail.com
Co-authored-by: JordiGN jordign.mx@gmail.com

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>n
+  </style>
 </head>
 <body>
   <header class="container">
@@ -68,6 +68,9 @@
         <div class="gs-btn-div div-center width-input-short">
           <input id="input-short" class="input-shrtn-link" type="text" placeholder="   Shorten a link here...">
         </div>
+        <div id="div-input">
+
+        </div>
         <div class="gs-btn-div div-center width-btn-short">
           <button class="btn-short-it" onclick="addElemento(getElementById('input-short').value)">Shorten It!</button>
         </div>
@@ -75,12 +78,12 @@
     </div>
     <div id="prueba" class="gray-bg div-center">
       <div class="cards-shortened">
-        <div class="div-center">
+        <div class="div-center srtn-link-cyan">
           <span>www.frontendmentor.com/dalskdjals</span>
         </div>
         <div class="rayita-shorten"></div>
         <div class="grid-cont">
-          <div class="div-center">
+          <div class="div-center srtn-link-cyan">
             <span class="cyan-color">https://shoretn/url</span>
           </div>
           <div class="div-center">
@@ -149,8 +152,7 @@
       <!-- contenedor de la rayita -->
       <div class="div-center">
         <!-- la rayita -->
-        <div class="rayita-cyan">
-        </div>
+        <dv class="rayita-cyan">
       </div>
       <div class="brnd-sction card-margin-top customizable-card">
         <div class="img-class div-center">
